--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ https://templatemo.com/tm-552-video-catalog
     </script>
 <div id="basebs_webchat_plugin" uuid="8b8f129b-a19f-4cd2-bddb-5b1c08e3d57b"></div>
 
-<script src="https://basecrm.connect247.vn/baseicdev-webchat/"></script>
+<script src="https://basecrm.connect247.vn/baseicdev/webchat-plugin.js"></script>
                                         
     </body>
 
